ui fixes with layouts shifts

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,15 @@
 
 @custom-variant dark (&:is(.dark *));
 
+:root {
+  body[data-scroll-locked][data-scroll-locked] {
+    overflow: auto !important;
+  }
+  body[data-scroll-locked] {
+    margin-right: 0 !important;
+  }
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
